--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@ x64/Debug/laba1.exe
 x64/Debug/laba1.ilk
 x64/Debug/laba1.pdb
 .vs/laba1/v16/.suo
+laba1/x64/Release/laba1.tlog/CL.command.1.tlog
+laba1/x64/Release/laba1.log
+laba1/x64/Release/laba1.obj
+laba1/x64/Release/laba1.tlog/CL.read.1.tlog
+laba1/x64/Release/laba1.tlog/CL.write.1.tlog
+laba1/x64/Release/laba1.tlog/laba1.write.1u.tlog
+laba1/x64/Release/laba1.tlog/link.read.1.tlog
+laba1/x64/Release/laba1.tlog/link.command.1.tlog
+laba1/x64/Release/laba1.tlog/link.write.1.tlog
+laba1/x64/Release/Tests.obj
+x64/Release/laba1.exe
+x64/Release/laba1.ipdb
+x64/Release/laba1.iobj
+laba1/x64/Release/vc142.pdb
+laba1/x64/Release/laba1.tlog/laba1.lastbuildstate
+x64/Release/laba1.pdb
+.vs/laba1/v16/ipch/AutoPCH/b393ef33d3c9b427/LABA1.ipch
